-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 11
-
Component/s: hotspot
-
b22
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8207111 | 12 | Thomas Schatzl | P2 | Resolved | Fixed | b03 |
| JDK-8207463 | 11.0.2 | Thomas Schatzl | P2 | Resolved | Fixed | b01 |
| JDK-8207573 | 11.0.1 | Thomas Schatzl | P2 | Resolved | Fixed | b02 |
The patch does not seem to be complete (or this is a new issue) as Kitchensink rarely crashes because of that.
GC log log snippet:
[...]
[2216.224s][1529512263954ms][debug][gc,heap ] GC(524) Heap after GC invocations=525 (full 9): garbage-first heap total 7412736K, used 719586K [0x000000062dc00000, 0x0000000800000000)
[2216.224s][1529512263954ms][debug][gc,heap ] GC(524) region size 1024K, 8 young (8192K), 8 survivors (8192K)
[2216.224s][1529512263954ms][debug][gc,heap ] GC(524) Metaspace used 44822K, capacity 46934K, committed 47280K, reserved 1091584K
[2216.224s][1529512263954ms][debug][gc,heap ] GC(524) class space used 4151K, capacity 4799K, committed 4864K, reserved 1048576K
[2216.224s][1529512263954ms][info ][gc ] GC(524) Pause Young (G1 Evacuation Pause) 5038M->702M(7239M) 885.290ms
[2216.224s][1529512263954ms][info ][gc,cpu ] GC(524) User=1.00s Sys=0.01s Real=0.89s
[2217.132s][1529512264861ms][info ][gc,heap,exit ] Heap
[2217.132s][1529512264861ms][info ][gc,heap,exit ] garbage-first heap total 7412736K, used 911074K [0x000000062dc00000, 0x0000000800000000)
[2217.132s][1529512264861ms][info ][gc,heap,exit ] region size 1024K, 196 young (200704K), 8 survivors (8192K)
[2217.132s][1529512264861ms][info ][gc,heap,exit ] Metaspace used 44885K, capacity 47035K, committed 47280K, reserved 1091584K
[2217.132s][1529512264861ms][info ][gc,heap,exit ] class space used 4162K, capacity 4833K, committed 4864K, reserved 1048576K
[2217.140s][1529512264870ms][info ][gc,verify,start] Verifying
[2218.621s][1529512266350ms][error][gc,verify ] Remset states differ: Region 359 (HC) remset Untracked with starts region 358 (HS) remset Complete
[2218.621s][1529512266351ms][error][gc,verify ] Remset states differ: Region 360 (HC) remset Untracked with starts region 358 (HS) remset Complete
[2218.621s][1529512266351ms][error][gc,verify ] Remset states differ: Region 361 (HC) remset Untracked with starts region 358 (HS) remset Complete
[2218.621s][1529512266351ms][error][gc,verify ] Remset states differ: Region 362 (HC) remset Untracked with starts region 358 (HS) remset
[...]
and the corresponding heap map:
| 358|0x0000000644200000, 0x0000000644300000, 0x0000000644300000|100%|HS| |TAMS 0x0000000644300000, 0x0000000644200000| Complete
| 359|0x0000000644300000, 0x0000000644400000, 0x0000000644400000|100%|HC| |TAMS 0x0000000644400000, 0x0000000644300000| Untracked
| 360|0x0000000644400000, 0x0000000644500000, 0x0000000644500000|100%|HC| |TAMS 0x0000000644500000, 0x0000000644400000| Untracked
| 361|0x0000000644500000, 0x0000000644600000, 0x0000000644600000|100%|HC| |TAMS 0x0000000644600000, 0x0000000644500000| Untracked
| 362|0x0000000644600000, 0x0000000644700000, 0x0000000644700000|100%|HC| |TAMS 0x0000000644700000, 0x0000000644600000| Untracked
| 363|0x0000000644700000, 0x0000000644800000, 0x0000000644800000|100%|HC| |TAMS 0x0000000644800000, 0x0000000644700000| Untracked
| 364|0x0000000644800000, 0x0000000644900000, 0x0000000644900000|100%|HC| |TAMS 0x0000000644900000, 0x0000000644800000| Untracked
| 365|0x0000000644900000, 0x0000000644a00000, 0x0000000644a00000|100%|HC| |TAMS 0x0000000644a00000, 0x0000000644900000| Untracked
I.e. HC are untracked while HS is complete.
This is heap verification after GC:
[stress.process.out] [2219.067s][error][gc,verify] Heap after failed verification (kind 0):
- backported by
-
JDK-8207111 Humongous continues remembered set does not match humongous start region one after Remark
-
- Resolved
-
-
JDK-8207463 Humongous continues remembered set does not match humongous start region one after Remark
-
- Resolved
-
-
JDK-8207573 Humongous continues remembered set does not match humongous start region one after Remark
-
- Resolved
-
- duplicates
-
JDK-8205429 applications/kitchensink/Kitchensink.java crashes in G1HeapVerifier::verify
-
- Closed
-
- relates to
-
JDK-8265119 G1: update_remset_before_rebuild mixes liveness in words with liveness in bytes
-
- Resolved
-
-
JDK-8204169 Humongous continues region remembered set states do not match the one from the corresponding humongous start region
-
- Resolved
-