8205426: Humongous continues remembered set does not match humongous start region one after Remark

Remembered set states for humongous objects crossing an internal per-thread processing threshold could synchronized if the humongous continues regions were processed first.

Reviewed-by: ehelin, kbarrett